<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="re.adjustme.de.readjustme.DashboardDayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="fill_vertical"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:src="@mipmap/logo7"
                android:theme="@style/Base.TextAppearance.AppCompat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/daily_posture_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <RadioGroup
                android:id="@+id/postureProfileRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:layout_gravity="fill_horizontal"
                android:background="@color/colorBackground"
                android:checkedButton="@+id/radio_all"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:button="@null"
                    android:gravity="center_horizontal"
                    android:padding="24px"
                    android:text="@string/dashboard_radio_all" />

                <RadioButton
                    android:id="@+id/radio_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center_horizontal"
                    android:padding="24px"
                    android:text="@string/dashboard_radio_week" />

                <RadioButton
                    android:id="@+id/radio_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:button="@null"
                    android:gravity="center_horizontal"
                    android:padding="24px"
                    android:text="@string/dashboard_radio_day" />

                <RadioButton
                    android:id="@+id/radio_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:button="@null"
                    android:gravity="center_horizontal"
                    android:padding="24px"
                    android:text="@string/dashboard_radio_hour" />

            </RadioGroup>

    </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:scrollbarStyle="insideOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/shoulderPieChart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="108dp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/splinePieChart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"/>


                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/hwsPieChart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"/>


                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/lwsPieChart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"/>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:baselineAligned="false"
            android:gravity="bottom"
            android:orientation="vertical">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorBackground"
                android:foregroundGravity="bottom"
                android:visibility="visible"
                app:itemIconTint="@color/bottom_nav_colors"
                app:itemTextColor="@color/bottom_nav_colors"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:menu="@menu/navigation">

            </android.support.design.widget.BottomNavigationView>
        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
